# PanTax

./: .gitignore  .gitmodules  README.md  build_graph.py  environment.yaml  genomes_cluster.py  genomes_info.txt  get_genomes_info.py  install.sh  pantax  pantax.yaml  prepare_building.py  read_classification.py  rust_dev.yaml  setup.py  strain_abundance_cal.py  strain_abundance_cal2.py
docker/: Dockerfile  environment.yaml
example/: example_genomes_info.txt  example_genomes_info2.txt  sample_genome_info.txt
example/genomes/: GCF_002012065.1_ASM201206v1_genomic.fna  GCF_006400955.1_ASM640095v1_genomic.fna  GCF_006401215.1_ASM640121v1_genomic.fna  GCF_007747015.1_ASM774701v1_genomic.fna  GCF_009720545.1_ASM972054v1_genomic.fna  GCF_016406325.1_ASM1640632v1_genomic.fna  GCF_024223415.1_ASM2422341v1_genomic.fna  GCF_025402875.1_ASM2540287v1_genomic.fna
example/sample_hifi_data/: long_reads.fq.gz.REMOVED.git-id
example/sample_hifi_data/genomes/: GCF_003790525.1_ASM379052v1_genomic.fna.REMOVED.git-id  GCF_006401215.1_ASM640121v1_genomic.fna.REMOVED.git-id  GCF_024223415.1_ASM2422341v1_genomic.fna.REMOVED.git-id
example/sample_ngs_data/genomes/: GCF_006400955.1_ASM640095v1_genomic.fna.REMOVED.git-id
pantax/: Cargo.toml  build_graph.py  gaf_filter.py  gaf_filter2.py  genomes_cluster.py  get_genomes_info.py  pantax  read_classification.py  species_abundance_cal.py  staticsData.py  strain_abundance_cal.py  toolkits.py
pantax/src/: alignment.rs  build_eq1.rs  cli.rs  constants.rs  construct.rs  error.rs  fastixe.rs  gaf_filter.rs  index.rs  lib.rs  main.rs  profile.rs  rcls.rs  sort_range.rs  stat.rs  task_scheduling.rs  types.rs  utils.rs  zip.rs
pantax/test/: test.sh
pantaxr/: Cargo.toml  build.rs
pantaxr/src/: build_eq1.rs  clog.rs  cmdline.rs  consts.rs  error.rs  fastixe.rs  gaf_filter.rs  lib.rs  main.rs  profile.rs  rcls.rs  sort_range.rs  stat.rs  zip.rs
sample/: sample_genome_info.txt
sample/sample_hifi_data/: config.ini  sample_hifi_data.ini
sample/sample_hifi_data/internal/: genome_locations.tsv
sample/sample_hifi_data/source_genomes/: GCF_003790525.1_ASM379052v1_genomic.fna.REMOVED.git-id  GCF_006401215.1_ASM640121v1_genomic.fna.REMOVED.git-id  GCF_024223415.1_ASM2422341v1_genomic.fna.REMOVED.git-id
sample/sample_ngs_data/: config.ini  genome_to_id.tsv  sample_ngs_data.ini  short_reads.fq.gz.REMOVED.git-id  taxonomic_profile_0.txt
sample/sample_ngs_data/2024.02.05_10.54.22_sample_0/reads/: reads_mapping.tsv.gz.REMOVED.git-id
sample/sample_ngs_data/distributions/: distribution_0.txt
sample/sample_ngs_data/internal/: genome_locations.tsv  meta_data.tsv
sample/sample_ngs_data/source_genomes/: GCF_006400955.1_ASM640095v1_genomic.fna.REMOVED.git-id
scripts/: aln_json_process.py  aln_process.py  build_graph.py  data_preprocessing  data_preprocessing.sh  extract_complete_genome.py  gaf_filter.py  genomes_cluster.py  genomes_process.py  get_filter_genomes_info.py  get_genomes_info.py  get_h5_from_gfa.py  get_rep_cluster_genomes_info.py  hcls_select_rep.py  otu_range.py  pantax  pantax_utils  prepare_building.py  read_classification.py  species_abundance_cal.py  staticsData.py  strain_abundance_cal.py  task_scheduling.py  toolkits.py
scripts/pantaxr/: Cargo.toml
scripts/pantaxr/src/: cmdline.rs  lib.rs  main.rs  profile.rs  stat.rs
scripts/panutils/: Cargo.toml
scripts/panutils/src/: cmdline.rs  fastixe.rs  lib.rs  main.rs  profile.rs  rcls.rs
test/: pantax-rg.sh  pantax.sh
tools/: vg.REMOVED.git-id
