[package]
name = "pantaxr"
version = "2.0.0"
edition = "2021"

[dependencies]
# bincode = { version = "2.0", features = ["derive"] }
bincode = "1"
cbc-src = { version = "*", features = ["cbcsolver", "parallel"] }
clap = { version = "4.5.35", features = ["derive"] }
coin_cbc = { version = "0.1.8", default-features = false }
cpu-time = "1.0.0"
crossbeam-channel = "0.5.15"
csv = "1.3.1"
dashmap = { version = "6.1.0", features = ["rayon"] }
flexi_logger = { version = "0.30.2", features = ["colors"] }
fs2 = "0.4.3"
glpk-rust = { version = "0.1.0", optional = true }
glpk-sys = { version = "0.2.0", optional = true }
grb = { version = "3.0.1", features = ["gurobi11"] }
hdf5-metno = { version = "0.10.1", optional = true }
highs = "1.11.0"
log = "0.4.27"
lz4_flex = "0.11.3"
nalgebra = "0.33.2"
needletail = { version = "0.6"}
polars = { version = "0.46.0", features = ["lazy", "dtype-struct", "is_in", "strings", "concat_str", "round_series"] }
rand = "0.9.1"
rayon = "1.10.0"
regex = "1.11.1"
rust-htslib = { version = "0.49", default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
zstd = { version = "0.13.3", features = ["zstdmt"] }

[features]
default = ["dev_test", "glpk"]
dev_test = [] 
glpk_rust = ["glpk-rust"]
glpk = ["glpk-sys"]
h5 = ["hdf5-metno"]
