[package]
name = "panutils"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.35", features = ["derive"] }
crossbeam-channel = "0.5.15"
csv = "1.3.1"
dashmap = "6.1.0"
grb = { version = "3.0.1", features = ["gurobi11"] }
log = "0.4.27"
nalgebra = "0.33.2"
needletail = { version = "0.6"}
polars = { version = "0.46.0", features = ["lazy", "dtype-struct", "is_in"] }
rayon = "1.10.0"
regex = "1.11.1"
rust-htslib = { version = "0.49", default-features = false }
simple_logger = "5.0.0"

[features]
default = ["dev_test"]
dev_test = [] 
